# Jujube-SpotSolution-CV

./: .gitignore  Cam_thread.py  Cmd_thread.py  Global_info.py  Hardware_info.py  LICENSE  README.md  Refine_window.py  Ui_jujube.py  custom_grips.py  deploy.bat  jujube.ui  main.py  old_part.py  pyproject.toml  requirements.txt  resources.qrc  run.bat
images/: resize.py
iot_device/: main_cam_s3_new.py  main_cmd.py
